--- a/videosharer/videos/templates/videos/base.html
+++ b/videosharer/videos/templates/videos/base.html
@@ -7,13 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
-    <title>videosharer</title>
+    <title>Streamify</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/media/css/style.css"> 
     
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
-    <title>videosharer</title>
+    <title>Streamify</title>
   </head>
     <body>
       {% include 'videos/navigation.html' %}
