--- a/videosharer/media/css/style.css
+++ b/videosharer/media/css/style.css
@@ -80,14 +80,14 @@
     text-decoration: none;
 }
 
-.navbar-form .search-button {
+.search-button {
     border: 0;
     background-color: rgba(0,0,0,0);
     font-size: 1.5rem;
     transition: 0.3s;
 }
 
-.navbar-form .search-button:hover {
+.search-button:hover {
     color: #555;
     transition: 0.3s;
 }
