--- a/videosharer/profiles/templates/profiles/profile.html
+++ b/videosharer/profiles/templates/profiles/profile.html
@@ -8,9 +8,8 @@
             <h1>{{ profile.user.username }}</h1>
         </div>
     </div>
-    <div class="row justify-content-center mt-3">
-        <a href="update" class="btn btn-outline-info btn-block mt-3">Update Profile</a>
-    </div>
+    
+        <center><a href="update" class="btn btn-outline-info mt-5">Update Profile</a></center>
     
     <div class="row justify-content-center mt-5">
         <div class="card col-md-6 col-sm-12 col-xs-12 p-3 shadow">
