user profile-user videos

--- a/videosharer/profiles/templates/profiles/profile.html
+++ b/videosharer/profiles/templates/profiles/profile.html
@@ -20,15 +20,23 @@
 
     <div class="row justify-content-center my-5">
         {% for video in videos %}
+        
         <div class="card col-md-3 col-sm-12 col-xs-12 p-3 shadow mr-md-3 my-3">
-            <img src="{{ video.thumbnail.url }}" class="card-img-top pt-2" alt="thumbnail">
-                <div class="card-body">
-                    <h5 class="card-title text-center">{{ video.title }}</h5>
-                    <p class="card-text text-muted text-center"><span class="mr-4">{{ video.uploader }}</span><span>{{ video.date_posted | date:"M d, Y" }}</span></p>
-                    <a href="{% url 'video-detail' video.pk %}" class="stretched-link"></a>
-                </div>
+          <img
+            src="{{ video.thumbnail.url }}"
+            class="card-img-top pt-2"
+            alt="thumbnail"
+          />
+          <div class="card-body">
+            <h5 class="card-title text-center">{{ video.title }}</h5>
+            <p class="card-text text-muted text-center">
+              <span class="mr-4">{{ video.uploader }}</span
+              ><span>{{ video.date_posted | date:"M d, Y" }}</span>
+            </p>
+            <a href="{% url 'video-detail' video.pk %}" class="stretched-link"></a>
+          </div>
         </div>
         {% endfor %}
-    </div>
+      </div>
 </div>
 {% endblock %}
