--- a/videosharer/profiles/templates/profiles/profile.html
+++ b/videosharer/profiles/templates/profiles/profile.html
@@ -38,5 +38,26 @@
         </div>
         {% endfor %}
       </div>
+      {% if videos.has_other_pages %}
+    <div class="row justify-content-center">
+        <ul class="pagination">
+            {% if videos.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ videos.previous_page_number }}">Previous</a>
+            </li>
+            {% endif %}
+            {% for num in videos.paginator.page_range %}
+            <li class="page-item {% if num == videos.number %}active{% endif %}">
+                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+            </li>
+            {% endfor %}
+            {% if videos.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ videos.next_page_number }}">Next</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
