--- a/videosharer/videos/templates/videos/video_category.html
+++ b/videosharer/videos/templates/videos/video_category.html
@@ -19,5 +19,26 @@
             </div>
             {% endfor %}
         </div>
+        
+        <!-- Pagination -->
+        {% if videos.has_other_pages %}
+        <ul class="pagination justify-content-center">
+            {% if videos.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ videos.previous_page_number }}">Previous</a>
+            </li>
+            {% endif %}
+            {% for num in videos.paginator.page_range %}
+            <li class="page-item {% if num == videos.number %}active{% endif %}">
+                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+            </li>
+            {% endfor %}
+            {% if videos.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ videos.next_page_number }}">Next</a>
+            </li>
+            {% endif %}
+        </ul>
+        {% endif %}
     </div>
 {% endblock content %}
