--- a/videosharer/videos/templates/videos/search.html
+++ b/videosharer/videos/templates/videos/search.html
@@ -14,5 +14,20 @@
             </div>
             {% endfor %}
         </div>
+        <div class="row justify-content-center mt-3">
+            <ul class="pagination">
+                {% if query_list.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ query_list.previous_page_number }}">Previous</a></li>
+                {% endif %}
+                {% for num in query_list.paginator.page_range %}
+                    <li class="page-item {% if num == query_list.number %}active{% endif %}">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% endfor %}
+                {% if query_list.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ query_list.next_page_number }}">Next</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
 {% endblock content%}
